<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.activities.ListingViewActivity"
    tools:showIn="@layout/activity_listing_view">

    <TextView
        android:id="@+id/view_listing_ending_in_time_date"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:gravity="center_vertical"
        android:text="(00:00, January 1)"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/view_listing_ending_in_days_hours"
        app:layout_constraintTop_toTopOf="@+id/view_listing_ending_in_days_hours" />

    <TextView
        android:id="@+id/view_listing_ending_in_days_hours"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:gravity="center_vertical"
        android:text="0 days 0 hours "
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/view_listing_ending_in_label"
        app:layout_constraintTop_toTopOf="@+id/view_listing_ending_in_label" />

    <TextView
        android:id="@+id/view_listing_ending_in_label"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="Auction ending in "
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="277dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#eeeeee"
        android:isScrollContainer="false"
        android:orientation="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/view_listing_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="153dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/view_listing_posted_by"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:text="Sample Precinct"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/view_listing_title"
        app:layout_constraintStart_toEndOf="@+id/view_listing_posted_by_label"
        app:layout_constraintTop_toTopOf="@+id/view_listing_posted_by_label" />

    <TextView
        android:id="@+id/view_listing_posted_by_label"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="Posted by "
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/view_listing_title"
        app:layout_constraintTop_toBottomOf="@+id/view_listing_title" />

    <TextView
        android:id="@+id/view_listing_title"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:text="Title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view_listing_ending_in_time_date"
        app:layout_constraintStart_toStartOf="@+id/view_listing_ending_in_label"
        app:layout_constraintTop_toBottomOf="@+id/view_listing_ending_in_label" />

    <ScrollView
        android:id="@+id/view_listing_description_scroller"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:isScrollContainer="true"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view_listing_posted_by"
        app:layout_constraintStart_toStartOf="@+id/view_listing_posted_by_label"
        app:layout_constraintTop_toBottomOf="@+id/view_listing_posted_by_label">

        <LinearLayout
            android:id="@+id/view_listing_description_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_listing_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description text"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="309dp"
                tools:layout_editor_absoluteY="482dp" />
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/view_listing_bid_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:allowUndo="true"
        android:background="#eeeeee"
        android:ems="10"
        android:hint="00.00"
        android:inputType="numberDecimal"
        android:paddingLeft="8dp"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_listing_title"
        app:layout_constraintEnd_toStartOf="@+id/view_listing_bid_button"
        app:layout_constraintStart_toEndOf="@+id/view_listing_ending_in_time_date"
        app:layout_constraintTop_toBottomOf="@+id/view_listing_min_bid_label" />

    <Button
        android:id="@+id/view_listing_bid_button"
        style="@android:style/Widget.Button.Small"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:hapticFeedbackEnabled="true"
        android:text="Bid"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view_listing_bid_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_listing_bid_input" />

    <Button
        android:id="@+id/view_listing_edit_button"
        android:layout_width="102dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hapticFeedbackEnabled="true"
        android:text="Edit Listing"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view_listing_title"
        app:layout_constraintEnd_toEndOf="@+id/view_listing_title"
        app:layout_constraintTop_toTopOf="@+id/view_listing_title" />

    <TextView
        android:id="@+id/view_listing_min_bid_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="MINIMUM: "
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view_listing_ending_in_time_date"
        app:layout_constraintStart_toStartOf="@+id/view_listing_bid_list"
        app:layout_constraintTop_toTopOf="@+id/view_listing_ending_in_time_date" />

    <TextView
        android:id="@+id/view_listing_min_bid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="2dp"
        android:gravity="center_vertical"
        android:text="$00.00"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view_listing_min_bid_label"
        app:layout_constraintEnd_toEndOf="@+id/view_listing_bid_list"
        app:layout_constraintStart_toEndOf="@+id/view_listing_min_bid_label"
        app:layout_constraintTop_toTopOf="@+id/view_listing_min_bid_label" />

    <ListView
        android:id="@+id/view_listing_bid_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#eeeeee"
        android:fastScrollEnabled="false"
        android:headerDividersEnabled="false"
        android:isScrollContainer="true"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="@+id/view_listing_description_scroller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/view_listing_ending_in_time_date"
        app:layout_constraintTop_toBottomOf="@+id/view_listing_bid_input"></ListView>

</android.support.constraint.ConstraintLayout>