...
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listing_list_image"
        app:layout_constraintTop_toBottomOf="@+id/listing_list_title" />

    <TextView
        android:id="@+id/listing_list_price"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="$00.00"
...
